# lab1-2-sem

./: CMakeLists.txt  class11.h  class4.h  class5.h  flowerbed.cpp  flowerbed.h  functions.cpp  functions.h  main.cpp  tests.cpp
finish/: CMakeLists.txt  list.h  main.cpp  task6.h
lab/: CMakeLists.txt  input.txt  input2.txt  main.cpp
